Changes in Sidebar Logo and Color

--- a/src/_metronic/assets/sass/core/components/_variables-dark.scss
+++ b/src/_metronic/assets/sass/core/components/_variables-dark.scss
@@ -13,7 +13,7 @@ $gray-500-dark:  #636674 !default;
 $gray-600-dark:  #808290 !default;
 $gray-700-dark:  #9A9CAE !default;
 $gray-800-dark:  #B5B7C8 !default;
-$gray-900-dark:  #F5F5F5 !default;
+$gray-900-dark:  #1b84ff !default;
 
 $grays-dark: (
 	"100": $gray-100-dark,
