Logo Sidebar Border Bottom Underline Remove

--- a/src/_metronic/assets/sass/core/components/_variables-dark.scss
+++ b/src/_metronic/assets/sass/core/components/_variables-dark.scss
@@ -47,15 +47,15 @@ $secondary-inverse-dark:			$white !default;
 
 // Light colors
 $light-dark: 						$gray-100-dark !default;
-$light-active-dark: 				#1F212A !default;
-$light-light-dark: 					#1F212A !default;
+$light-active-dark: 				#ffffff !default;
+$light-light-dark: 					#ffffff !default;
 $light-clarity-dark: 				rgba(31, 33, 42, 0.20) !default;
 $light-inverse-dark:				$gray-600-dark !default;
 
 // Success colors
 $success-dark: 						#00A261 !default; 
 $success-active-dark: 				#01BF73 !default;
-$success-light-dark: 				#1F212A !default;
+$success-light-dark: 				#ffffff !default;
 $success-clarity-dark: 				rgba(#00A261, 0.2) !default;
 $success-inverse-dark: 				$white !default;
 
