Update Padding Space in Table Pages

--- a/src/_metronic/assets/sass/layout/_main.scss
+++ b/src/_metronic/assets/sass/layout/_main.scss
@@ -8,7 +8,7 @@
 	.app-main {	
 		:not([data-kt-app-footer-fixed="true"]) & {        
 			.app-content {			
-				padding-bottom: 0 !important;					
+				padding: 0 !important;					
 			}
 		} 	
 		
