Update Feedback Page Image Update

--- a/src/app/modules/profile/txt/Users/tab/FeedbackList.css
+++ b/src/app/modules/profile/txt/Users/tab/FeedbackList.css
@@ -1,3 +1,10 @@
 .quill.custom-quill-editor .ql-editor{
     height: 10rem;
 }
+
+.me-7.mb-4.feedbackimage_two .symbol img {
+    display: flex;
+    object-fit: cover;
+    margin: 0 1rem 0 0;
+    border-radius: 0;
+}
